UI: Icons can now be colored individually - fixes #1552
rn=

(integrated from master branch change 9.2.1-1698-g0ae7251 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -1,8 +1,8 @@
 #windowButtons
 {
-    .icon-minus-circle2 { color: @window-button-minimize; }
-    .icon-plus-circle2 { color: @window-button-maximize; }
-    .icon-cancel-circle2 { color: @window-button-close; }
+    .icon-minus-circle2:before { color: @window-button-minimize; }
+    .icon-plus-circle2:before { color: @window-button-maximize; }
+    .icon-cancel-circle2:before { color: @window-button-close; }
     
     & > toolbarbutton:hover
     {
