--- a/src/chrome/komodo/skin/global/prefs.less
+++ b/src/chrome/komodo/skin/global/prefs.less
@@ -56,3 +56,7 @@
         padding: 0 24px;
     }
 }
+
+prefwindow:root {
+  -moz-binding: url("chrome://global/content/bindings/preferences.xml#prefwindow") !important;
+}
