browsePreview: missing reload button fixes #1603
(integrated from master branch change e059a91 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -178,18 +178,11 @@ vbox[anonid="quickstart"]
         }
     }
 }
-.reload-icon
+.reload-icon,
+.reload-icon > .box-inherit
 {
     .icon();
     .icon-refresh();
-    
-    & > hbox,vbox
-    {
-        & > image
-        {
-            margin-right: 6px;
-        }
-    }
 }
 // Finish spacing button fix
 .overflow-toolbarbutton > .toolbarbutton-text { .icon(); .icon-arrow-down3(); }
