Move prefs bindings to bindins.less. No !important
(integrated from master branch change 102e74c by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -88,3 +88,6 @@ menuitem[type="checkbox"],
 menuitem[type="radio"] {
   -moz-binding: url("chrome://komodo/content/bindings/menu.xml#menuitem-iconic");
 }
+prefwindow:root {
+  -moz-binding: url("chrome://global/content/bindings/preferences.xml#prefwindow");
+}
