UI: Fix minimap border color
rn=

(integrated from master branch change 9.2.1-1661-g8faf127 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -584,4 +584,13 @@ vbox[anonid="quickstart"] .inner > button
     visibility: collapse;
 }
 
+/* Minimap */
+
+minimap
+{
+  width: 200px;
+  max-width: 200px;
+  border-left: 1px solid @border;
+}
+
 }
