--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -498,7 +498,7 @@ treechildren::-moz-tree-twisty {
     margin-top: 3px;
 }
 
-.tree-stack
+:root:not(page.widget) .tree-stack
 {
     min-height: 100px;
 }
