UI: Fix css error due to root element name
(integrated from master branch change 9.2.1-1669-g8d800d8 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -498,7 +498,7 @@ treechildren::-moz-tree-twisty {
     margin-top: 3px;
 }
 
-:root:not(page.widget) .tree-stack
+:root:not(.widget) .tree-stack
 {
     min-height: 100px;
 }
