Increase padding on pref category icons - fixes #1486 rn=
(integrated from master branch change 9.2.1-1670-ge243b7e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -23,19 +23,24 @@
 
     treechildren::-moz-tree-cell-text
     {
-        padding-left: 14px;
+        padding-left: 18px;
+    }
+    
+    treechildren::-moz-tree-cell(child-row)
+    {
+        margin-left: 16px;
     }
     
     treechildren::-moz-tree-cell-text(child-row)
     {
-        padding-left: 2px;
-        font-weight: normal;
+        padding-left: 0;
     }
 
     treechildren::-moz-tree-cell
     {
+        padding-left: 4px;
         background-size: 16px 16px;
-        background-position: 12px center;
+        background-position: 16px center;
         background-repeat: no-repeat;
     }
 
