UI: Reduce size of file status icons (collab, publishing, readonly)
rn=

(integrated from master branch change 9.2.1-1672-g2715453 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -656,14 +656,17 @@ checkbox#search-in-subdirs .checkbox-spacer-box
 .file-collab-icon
 {
     .icon-user();
+    font-size: 10px;
 }
 
 .file-readonly-icon
 {
     .icon-lock();
+    font-size: 10px;
 }
 
 .file-publishing-status-icon
 {
     .icon-cloud();
+    font-size: 10px;
 }
