UI: Fix menubar cut off when window is maximized on Windows - fixes #1461
rn=

(integrated from master branch change 9.2.1-1678-gc17d4cf by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -84,7 +84,7 @@ dialog:not([_hidechrome="true"]):not(.embedded)
 #komodo_main[_hidechrome="true"][os-name="Windows_NT"][sizemode="maximized"],
 #komodo_main[_hidechrome="true"][os-name="Windows_NT"][_sizemode="maximized"]
 {
-    #toolbox_main #main-toolboxrow-wrapper
+    #toolbox_main
     {
         /* For some reason windows seems to eat up approx 6 pixels of the window top */
         padding-top: 10px;
