UI: Limit places icons size to 14px - fixes #1404
rn=

(integrated from master branch change 9.2.1-1680-g0359f50 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/places/skin/places.p.less
+++ b/src/modules/places/skin/places.p.less
@@ -102,7 +102,7 @@ tree.projectPlacesTree {
 	display: none;
 }
 
-treechildren#places-files-tree-body::-moz-tree-image {
+treechildren::-moz-tree-image {
   width: 14px;
   height: 14px;
 }
