Missing runcmd icon. Fixes #1586 rn=
(integrated from master branch change 54e6fd8 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -75,6 +75,7 @@ button, toolbarbutton, menuitem, tab
 .native-copy-icon { .icon(); .icon-copy3(); }
 .native-paste-icon { .icon(); .icon-paste2(); }
 .ishell-icon > .box-inherit { .icon(); .icon-terminal(); }
+.run-command-icon { .icon(); .icon-terminal(); }
 .power-icon { .icon(); .icon-power2(); }
 .docs-icon { .icon(); .icon-bookmark(); }
 .rx-icon { .icon(); .icon-regexp2(); }
