--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -110,3 +110,10 @@
     color: @foreground-special;
     background: @secondary-special;
 }
+
+/* Tooltips */
+
+#editorTooltip
+{
+    margin-left: 10px;
+}
