Icons: Don't render two reload icons
rn=

(integrated from master branch change 9.2.1-1703-g0c21fb1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -194,7 +194,7 @@ vbox[anonid="quickstart"]
         }
     }
 }
-.reload-icon,
+.reload-icon.browser-toolbar-button,
 .reload-icon > .box-inherit
 {
     .icon();
