Dialogs: issue link and reformat error dialog.  Fixes #1466
(integrated from master branch change 69653e3 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -144,6 +144,7 @@ button, toolbarbutton, menuitem, dropmarker, tab,
 .goforward-icon{.icon(); .icon-arrow-right(); margin-right: 6px; }
 .columns-icon { .icon(); .icon-columns(); }
 .find-copy-icon{ .icon(); .icon-files-empty2();}
+.warning-icon{ .icon(); .icon-warning();}
 
 // Work around to space out icons from their text or neighbours
 // Add any new icons that require spacing this section so we
