Find: You can now choose to have find results open in file tabs (instead of bottom panel)
rn=

(integrated from master branch change 9.2.1-1773-g588557c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/bindings/views.p.css
+++ b/src/chrome/komodo/skin/bindings/views.p.css
@@ -56,6 +56,10 @@ view[type='quickstart']  {
   -moz-binding: url('chrome://komodo/content/quickstart.xml#view-quickstart');
 }
 
+view[type='findresults']  {
+  -moz-binding: url('chrome://komodo/content/bindings/views-findresults.xml#view-findresults');
+}
+
 view[type='diff']  {
   -moz-binding: url('chrome://komodo/content/bindings/views-diff.xml#view-diff');
 }
