--- a/src/chrome/komodo/skin/global/components/filestatus.less
+++ b/src/chrome/komodo/skin/global/components/filestatus.less
@@ -5,6 +5,13 @@
     visibility: collapse;
 }
 
+tab[view-type="findresults"] .file-readonly-icon,
+tab[view-type="findresults"] .native_file_image
+{
+    visibility: collapse;
+    display: none;
+}
+
 .file-collab-icon[collab_status="collaboration_online"] {
     color: @state-ok;
 }
