--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -237,6 +237,8 @@ tab[widget^="debugsession"][dbg_status="interactive"] { .icon(); .icon-play-circ
 tab[widget^="findresults_tabpanel"] { .icon(); .icon-binoculars(); }
 tab[widget^="klint_tabpanel"] { .icon(); .icon-circle-code(); }
 
+tab[view-type="findresults"] .tab-icons:first-child { .icon(); .icon-binoculars(); }
+
 /* Breakpoints */
 .breakpoint-new-icon > .box-inherit
 {
