Console: You can now select a different context by typing /windows
rn=

(integrated from master branch change 9.2.1-1803-g27e596e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -31,6 +31,17 @@ ul, li
     list-style: none;
 }
 
+a, a:visited {
+    color: @secondary-special;
+    background-color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 #console
 {
     flex-grow: 1;
