Scheme Editor: Converted listbox to richlistbox
(integrated from master branch change 9.2.1-1807-g6bc6973 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/dialogs/colorscheme.less
+++ b/src/chrome/komodo/skin/dialogs/colorscheme.less
@@ -96,7 +96,7 @@ view
         min-height: 20px;
     }
     
-    listitem[selected="true"]
+    richlistitem[selected="true"]
     {
         color: @selected-foreground !important;
         background: @selected !important;
