Scheme Editor: Fixed issue where it was impossible to read certain text - fixes #1203
rn=

(integrated from master branch change 9.2.1-1808-g4edb6cd by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/dialogs/colorscheme.less
+++ b/src/chrome/komodo/skin/dialogs/colorscheme.less
@@ -103,6 +103,15 @@ view
         text-decoration: underline;
         font-weight: bold;
     }
+    
+    .styleguide
+    {
+        font-weight: bold;
+        margin-right: 4px;
+        padding-left: 4px;
+        padding-right: 4px;
+        text-decoration: none !important;
+    }
 }
 
 panel.scheme-apply
