UI: Limit toolbox icon sizes - fixes #1605
rn=

(integrated from master branch change 9.2.1-1814-ga954f9b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -19,6 +19,7 @@
 @import url("chrome://komodo/skin/global/components/customize.less");
 @import url("chrome://komodo/skin/global/components/languages.less");
 @import url("chrome://komodo/skin/global/components/filestatus.less");
+@import url("chrome://komodo/skin/global/components/toolbox.less");
 
 @import url("resource://profile/classic.less");
 
