UI: You can now change font face/size/spacing globally in appearance preferences
rn=

(integrated from the KomodoIDE master branch change 374bc7c by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/374bc7c

--- a/src/chrome/komodo/skin/prefs/prefs.css
+++ b/src/chrome/komodo/skin/prefs/prefs.css
@@ -58,3 +58,11 @@ groupbox#pref-languages-primary-selector-groupbox.collapse {
 {
     outline: 1px solid red;
 }
+
+#interface-font label,
+#interface-font .menulist-label-box,
+#editor-font label,
+#editor-font .menulist-label-box
+{
+    font-family: inherit;
+}
