--- a/src/chrome/komodo/skin/global/components/filestatus.less
+++ b/src/chrome/komodo/skin/global/components/filestatus.less
@@ -3,6 +3,12 @@
 .file-publishing-status-icon:not([file_publishingStatus])
 {
     visibility: collapse;
+    display: none;
+}
+
+.file-status-icons > *
+{
+    margin-right: 2px;
 }
 
 tab[view-type="findresults"] .file-readonly-icon,
