ColorSchemes: Classic: Fix menupopup color not contrasting - fixes #1930
rn=

(integrated from the KomodoIDE master branch change 50835a6 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/50835a6

--- a/src/chrome/komodo/skin/global/classic.less
+++ b/src/chrome/komodo/skin/global/classic.less
@@ -28,7 +28,7 @@ menulist
     background: ButtonFace !important;
     padding: 0;
     
-    &, label
+    &, label.button-text
     {
         color: ButtonText !important;
     }
