UI: Fix side toolbar icon color on some themes
(integrated from the KomodoIDE master branch change 5205ee0 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/5205ee0

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -200,6 +200,16 @@
     }
 }
 
+#toolbox_side
+{
+    // Color the dynamic button icons
+    .dynamic-button toolbarbutton:before,
+    .dynamic-button dropmarker:before
+    {
+        color: @foreground !important;
+    }
+}
+
 &[os-name="Darwin"]
 {
     #main-toolboxrow,
