Breadcrums: Fix breadcrumb arrow colored incorrectly
(integrated from the KomodoIDE master branch change 0a37743 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/0a37743

--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -64,9 +64,14 @@
         
         .breadcrumb-arrow
         {
+            margin: 0 2px 0 2px;
+        }
+        
+        .breadcrumb-arrow,
+        .breadcrumb-arrow:before
+        {
             font-size: 14px;
             color: @secondary-special;
-            margin: 0 2px 0 2px;
         }
     }
 
