Find: Fix find frame icon toggles not indicating their state (checked)
(integrated from the KomodoIDE master branch change abf4c1d by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/abf4c1d

--- a/src/chrome/komodo/skin/dialogs/find2.less
+++ b/src/chrome/komodo/skin/dialogs/find2.less
@@ -74,9 +74,11 @@ button#pattern-shortcuts
 }
 
 #opt-case,
-checkbox[checked]
+#opt-case .checkbox-spacer-box:before,
+checkbox[checked],
+checkbox[checked] .checkbox-spacer-box:before
 {
-    color: @secondary-special;
+    color: @secondary-special !important;
 }
 
 checkbox:not(#confirm-replacements-in-files) .checkbox-label-box
