Colors: Fix side toolbar icon color not respecting color pref - fixes #1962
(integrated from the KomodoIDE master branch change 1c80b9a by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/1c80b9a

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -204,7 +204,10 @@
 {
     // Color the dynamic button icons
     .dynamic-button toolbarbutton:before,
-    .dynamic-button dropmarker:before
+    .dynamic-button dropmarker:before,
+    toolbaritem > toolbarbutton:before,
+    toolbaritem > toolbarbutton > toolbarbutton:before,
+    toolbaritem > dropmarker:before
     {
         color: @foreground !important;
     }
