--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -682,6 +682,11 @@ button[type="checkbox"][checked="true"]
     box-shadow: inset 0px 0px 0px 1px @secondary-special;
 }
 
+toolbarbutton[type="checkbox"][checked="true"]:before
+{
+    color: @secondary-special !important;
+}
+
 /* Groupboxes */
 
 .groupbox-body
