UI: Don't color toolbar checked icons
(integrated from the KomodoIDE master branch change 17f06d2 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/17f06d2

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -682,7 +682,7 @@ button[type="checkbox"][checked="true"]
     box-shadow: inset 0px 0px 0px 1px @secondary-special;
 }
 
-toolbarbutton[type="checkbox"][checked="true"]:before
+:not(toolbaritem) > toolbarbutton[type="checkbox"][checked="true"]:before
 {
     color: @secondary-special !important;
 }
