Colorpicker: removed ability to resize the dialog (the colorpicker is not responsive-design)
Signed-off-by: Defman21 <i@defman.me>

--- a/src/chrome/komodo/skin/colorpicker/wrapper.less
+++ b/src/chrome/komodo/skin/colorpicker/wrapper.less
@@ -2,3 +2,10 @@
 {
     display: none;
 }
+
+#colorPickerWrapper {
+    max-width: 330px;
+    max-height: 540px;
+    min-width: 330px;
+    min-height: 540px;
+}
