--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -70,7 +70,7 @@
     {
         max-width: 500px;
         margin-right: 25px;
-        color: inherit;
+        color: @state-foreground;
     }
 
     button
