slack: swap ko/prefs for ko/simple-storage. MANY other changes :)
(integrated from the KomodoIDE master branch change 38cf9de by Carey Hoffman <careyh@activestate.com>)

https://github.com/Komodo/KomodoIDE/commit/38cf9de

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -145,6 +145,7 @@ button, toolbarbutton, menuitem, dropmarker, tab,
 .columns-icon { .icon(); .icon-columns(); }
 .find-copy-icon{ .icon(); .icon-files-empty2();}
 .warning-icon{ .icon(); .icon-warning();}
+.icon-share > .box-inherit { .icon(); .icon-earth2() }
 
 // Work around to space out icons from their text or neighbours
 // Add any new icons that require spacing this section so we
