ui: Style panels with dialog class as dialogs
(integrated from the KomodoIDE master branch change 81588ae by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/81588ae

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -699,7 +699,8 @@ button[type="checkbox"][checked="true"]
 
 .dialog:root,
 dialog:root,
-.pref-window
+.pref-window,
+panel.dialog
 {
     &:not(.embedded)
     {
