UI: Scrollcorners should be transparent
(integrated from the KomodoIDE master branch change 9867831 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/9867831

--- a/src/chrome/komodo/skin/global/_scrollbars.less
+++ b/src/chrome/komodo/skin/global/_scrollbars.less
@@ -12,6 +12,11 @@ page.widget[containerOrient="vertical"] scrollbar
     overflow-y: scroll !important;
 }
 
+scrollcorner
+{
+    background: transparent !important;
+}
+
 scrollbar
 {
     -moz-appearance: none !important;
