UI: Added buttongroup styling
(integrated from the KomodoIDE master branch change e45baf6 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/e45baf6

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -677,6 +677,17 @@ spinbuttons
     }
 }
 
+buttongroup 
+{
+    margin: 4px;
+    
+    & > button
+    {
+        padding: 4px !important;
+        margin: 0 !important;
+    }
+}
+
 button[type="checkbox"][checked="true"]
 {
     box-shadow: inset 0px 0px 0px 1px @secondary-special;
