UI: Added embedded window widget styling
(integrated from the KomodoIDE master branch change dc2e1cd by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/dc2e1cd

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -819,7 +819,8 @@ page.widget richlistitem
     padding-right: 4px;
 }
 
-page.widget
+page.widget,
+window.embedded.widget
 {
     background: @widget !important;
     color: @foreground-widget !important;
