Icons: Added yarn icon
(integrated from the KomodoIDE master branch change d5a850e by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/d5a850e

--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -1,5 +1,6 @@
 @icomoon-font-path: "fonts";
 
+@icon-Yarn: "\e907";
 @icon-cordova: "\e903";
 @icon-phonegap: "\e904";
 @icon-gulp: "\e905";
@@ -226,4 +227,3 @@
 @icon-cloud: "\f0c2";
 @icon-angle-left: "\f104";
 @icon-angle-right2: "\f106";
-
