UI: Properly color transparent lists/trees in dialogs
(integrated from the KomodoIDE master branch change dc62fe3 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/dc62fe3

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -789,6 +789,24 @@ panel.dialog
     {
         border-right: 1px dashed @background;
     }
+
+    tree, listbox, richlistbox
+    {
+        &.bg_transparent
+        {
+            treecol,
+            treecolpicker
+            {
+                background: @background;
+            }
+
+            &:not(tree),
+            .tree-rows
+            {
+                background: @contrast;
+            }
+        }
+    }
     
 }
 
