Console: Show scrollbar and make sure it doesn't overlap text
rn=

(integrated from the KomodoIDE master branch change 01416d9ac5 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/01416d9ac5

--- a/src/chrome/komodo/skin/global/_scrollbars.less
+++ b/src/chrome/komodo/skin/global/_scrollbars.less
@@ -58,7 +58,7 @@ scrollbar
 
 /* Modals */
 
-dialog, :root.dialog, :root.pref-window
+dialog, :root.dialog, :root.pref-window, .widgetToolbarWrap
 {
     scrollbar thumb
     {
