SDK: Implemented ko/progress
(integrated from the KomodoIDE master branch change cc14da4911 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/cc14da4911

--- a/src/chrome/komodo/skin/global/mixins.less
+++ b/src/chrome/komodo/skin/global/mixins.less
@@ -34,3 +34,17 @@
     transform: scaleY(0.6);
   }
 }
+
+.loader(@color)
+{
+    min-width: 10rem;
+    min-height: 1rem;
+    background: linear-gradient(to right, transparent 50%, @color 50%);
+    background-size: 200% 200%;
+    animation: progress-undetermined 1s ease infinite;
+}
+
+@keyframes progress-undetermined {
+    0%{background-position:100% 50%}
+    100%{background-position:-100% 50%}
+}
