--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -742,7 +742,8 @@ panel.dialog
     }
 
     tabbox tabpanels,
-    .groupbox-body
+    .groupbox-body,
+    .body
     {
         background: @background;
         color: @foreground;
